tests/baselines/reference/globalThisBlockscopedProperties.errors.txt
tests/cases/conformance/es2019/globalThisBlockscopedProperties.ts(5,12): error TS2339: Property 'y' does not exist on type 'typeof globalThis'.
tests/cases/conformance/es2019/globalThisBlockscopedProperties.ts(6,12): error TS2339: Property 'z' does not exist on type 'typeof globalThis'.
tests/cases/conformance/es2019/globalThisBlockscopedProperties.ts(8,12): error TS2339: Property 'y' does not exist on type 'typeof globalThis'.
tests/cases/conformance/es2019/globalThisBlockscopedProperties.ts(9,12): error TS2339: Property 'z' does not exist on type 'typeof globalThis'.


==== tests/cases/conformance/es2019/globalThisBlockscopedProperties.ts (4 errors) ====
    var x = 1
    const y = 2
    let z = 3
    globalThis.x // ok
    globalThis.y // should error, no property 'y'
               ~
!!! error TS2339: Property 'y' does not exist on type 'typeof globalThis'.
    globalThis.z // should error, no property 'z'
               ~
!!! error TS2339: Property 'z' does not exist on type 'typeof globalThis'.
    globalThis['x'] // ok
    globalThis['y'] // should error, no property 'y'
               ~~~
!!! error TS2339: Property 'y' does not exist on type 'typeof globalThis'.
    globalThis['z'] // should error, no property 'z'
               ~~~
!!! error TS2339: Property 'z' does not exist on type 'typeof globalThis'.
    